# TcpComm

./: CMakeLists.txt  LICENSE
TcpClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TcpServer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/TcpServer/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
